add about and education section

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,13 @@
 </head>
 <body class="font-Poppins">
   <main>
-    <section class="w-full min-h-screen flex items-center">
+    <!-- Hero-Section -->
+    <section class="w-full py-10 flex items-center">
         <div class="max-w-6xl mx-auto px-6 w-full">
             <div class="flex flex-col-reverse md:flex-row items-center justify-center gap-10 animate-fade-up scroll-hidden">
                 <!-- Text -->
-                <div class="text-black items-center mx:auto md:text-left">
-                    <div class="flex items-center gap-2">
+                <div class="items-center mx:auto md:text-left">
+                    <div class="flex items-center">
                         <h1 class="font-extrabold text-3xl md:text-5xl text-black">Hi, i'm Reza</h1>
                         <img src="./asset/img/hi.png" alt="Icon Hand" class="w-20 h-10 object-cover" />
                     </div>
@@ -20,6 +21,9 @@
                     <p class="mt-2 max-w-md">
                         I build simple and clean user interfaces and I’m currently learning frontend development.
                     </p>
+
+                    <!-- Button CV -->
+                    <a href="asset/CV_Reza Arya Irhamilah.pdf" class="inline-flex items-center justify-center mt-10 px-6 h-10 bg-black text-white rounded-[5px] hover:bg-gray-800 transition">My CV</a>
                 </div>
 
                 <!-- Photo -->
@@ -34,8 +38,62 @@
         </div>
     </section>
 
-    <section class="w-full min-h-screen bg-blue-300">
+    <section class="w-full py-10 flex items-center">
+        <div class="max-w-3xl mx-auto px-6">
+            <div class="max-w-4xl animate-fade-up">
+                <h2 class="text-3xl md:text-4xl font-extrabold">About</h2>
+                <p class="mt-4">Saya Reza Arya Irhamilah, Mahasiswa Aktif S1 Semester 6 Program Studi Teknik Informatika
+                Universitas Indraprasta PGRI angakatan tahun 2021. Pengalaman saya di berbagai kegiatan baik
+                dalam Universitas maupun luar Universitas telah mengasah kemampuan dalam membuat
+                project aplikasi input data berbasis Java dan Database. Saya senang belajar dan mencoba
+                hal-hal baru. Selain itu, memiliki minat yang cukup luas dalam dunia pemrograman, mahir
+                dalam menggunakan Bahasa pemrograman Java, HTML, dan CSS, serta bersedia mempelajari
+                segala Bahasa pemrograman yang ada.</p>
+            </div>
+    </section>
 
+    <!-- Section-Education -->
+    <section class="w-full py-16">
+        <div class="max-w-3xl mx-auto px-6">
+            <div class="max-w-4xl animate-fade-up">
+                <!-- Title List -->
+                <div class="mb-4">
+                    <h2 class="text-3xl md:text-4xl font-bold">Education</h2>
+                </div>
+
+                <!-- Education List -->
+                <div class="grid gap-8">
+                   <!-- Card One -->
+                    <a href="https://unindra.ac.id/" target="_self" class="scroll-hidden flex items-center ronded-xl hover:bg-gray-500 transform">
+                        <div class="w-full flex items-center gap-4">
+                            <img src="asset/img/unindra-logo.png" class="w-12">
+                            <div class="">
+                                <h3 class="text-bold font-bold">Universitas IndraPrasta PGRI</h3>
+                                <p class="text-[12px]">Teknik Informatika</p>
+                            </div>
+                            <div class="ml-auto">
+                                <p class="text-xs">2021 – 2024</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!-- Card One -->
+                    <a href="https://unindra.ac.id/" target="_self"
+                        class="scroll-hidden flex items-center ronded-xl hover:bg-gray-50 transform">
+                        <div class="w-full flex items-center gap-4">
+                            <img src="asset/img/Hacktiv8.png" class="w-12">
+                            <div class="">
+                                <h3 class="text-bold font-bold">Hacktiv8</h3>
+                                <p class="text-[12px]">ReactJs for Front-End Developer</p>
+                            </div>
+                            <div class="ml-auto">
+                                <p class="text-xs">2021 – 2024</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="js/script.js"></script>
